--- a/src/app/home/pages/skills/skills.component.html
+++ b/src/app/home/pages/skills/skills.component.html
@@ -14,59 +14,59 @@
             <!-- <h4 class="text-center mb-4">{{'TechnicallSkills'|translate}}</h4> -->
             <div>
                 <ul class="row list-unstyled">
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill">HTML5</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill">CSS</p>
                         <app-skill-rating [rating]="8"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill">Bootstrap 4</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill"> Material Design</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill">Javascript</p>
                         <app-skill-rating [rating]="9"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill">Jquery</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill"> Angular 4+</p>
                         <app-skill-rating [rating]="10"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill"> React JS</p>
                         <app-skill-rating [rating]="6"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill"> PHP</p>
                         <app-skill-rating [rating]="9"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill">Laravel</p>
                         <app-skill-rating [rating]="9"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill"> Node JS</p>
                         <app-skill-rating [rating]="6"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill"> SQL</p>
                         <app-skill-rating [rating]="6"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill"> NoSQL</p>
                         <app-skill-rating [rating]="6"></app-skill-rating>
                     </li>
-                    <li class="col-6 d-flex justify-content-between my-1">
+                    <li class="col-md-6 d-flex justify-content-between my-1">
                         <p class="label-skill"> Github</p>
                         <app-skill-rating [rating]="9"></app-skill-rating>
                     </li>
