--- a/src/app/home/pages/experience/experience.component.html
+++ b/src/app/home/pages/experience/experience.component.html
@@ -3,31 +3,55 @@
 
     <div class="timeline-border" [class]="selectedChild">
         <div id="timeline">
-
             <div class="tl-item" (mouseover)="selectedChild='item-1'" (mouseout)="selectedChild=''">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none; fill: rgba(0,0,0,0.1);">
+                    </path>
+                </svg>
                 <div class="tl-bg" style="background-color: #ec4c5c"></div>
+                <div class="tl-logo">
+                    <img src="assets/images/PHD.png" alt="" width="50">
+                </div>
                 <div class="tl-year">
                     <p class="font-weight-bold">2016</p>
                 </div>
                 <div class="tl-content">
                     <p class="text-uppercase">PHD 2014 Consultores</p>
-                    <p>
+                    <p class="text-description">
                         Pasante en tecnologías de la
                         información: Aprendizaje de instalación,
                         configuración y uso de herramientas Big
                         Data
                     </p>
                 </div>
+                <!-- Creating a SVG image -->
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none; fill: rgba(255,255,255,0.1);">
+                    </path>
+                </svg>
             </div>
 
             <div class="tl-item" (mouseover)="selectedChild='item-2'" (mouseout)="selectedChild=''">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none; fill: rgba(0,0,0,0.1);">
+                    </path>
+                </svg>
                 <div class="tl-bg" style="background-color: #4ABDAC"></div>
+                <div class="tl-logo">
+                    <img src="assets/images/Iconsolutions.png" alt="" width="50">
+                </div>
                 <div class="tl-year">
                     <p class="font-weight-bold">2017</p>
                 </div>
                 <div class="tl-content">
                     <p class="text-uppercase">Inv. Iconsolutions C.A</p>
-                    <p>
+                    <p class="text-description">
                         Desarrolladora Fullstack: Desarrollo del
                         frontend, backend y modelado y
                         configuración de bases de datos
@@ -35,47 +59,96 @@
                         medida
                     </p>
                 </div>
+                <!-- Creating a SVG image -->
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none;fill: rgba(255,255,255,0.1);">
+                    </path>
+                </svg>
             </div>
 
             <div class="tl-item" (mouseover)="selectedChild='item-3'" (mouseout)="selectedChild=''">
-                <div class="tl-bg" style="background-color: #FC9E4F"></div>
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none; fill: rgba(0,0,0,0.1);">
+                    </path>
+                </svg>
+                <div class="tl-bg" style="background-color: #FF8C42"></div>
+                <div class="tl-logo">
+                    <img src="assets/images/Softech.png" alt="" width="50">
+                </div>
                 <div class="tl-year">
                     <p class="font-weight-bold">2018</p>
                 </div>
                 <div class="tl-content">
                     <p class="text-uppercase">Softech Consultores C.A</p>
-                    <p>
+                    <p class="text-description">
                         Analista programador I: Analizar, diseñar
                         y programar funcionalidades, clases y
                         subsistemas del sistema Profit Plus 2kDoce
                     </p>
                 </div>
+                <!-- Creating a SVG image -->
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none;fill: rgba(255,255,255,0.1);">
+                    </path>
+                </svg>
             </div>
 
             <div class="tl-item" (mouseover)="selectedChild='item-4'" (mouseout)="selectedChild=''">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none; fill: rgba(0,0,0,0.1);">
+                    </path>
+                </svg>
                 <div class="tl-bg" style="background-color: #3D348B"></div>
+                <div class="tl-logo">
+                    <img src="assets/images/Acorde.png" alt="" width="50">
+                </div>
                 <div class="tl-year">
                     <p class="font-weight-bold">2018</p>
                 </div>
                 <div class="tl-content">
                     <p class="text-uppercase">Acorde 9S International C.A</p>
-                    <p>
+                    <p class="text-description">
                         Desarrolladora FullStack: Desarrollo de
                         aplicaciones web utilizando tecnologías
                         y framework actuales: ReactJS, Angular
                         4+,Laravel, Drupal.
                     </p>
                 </div>
+                <!-- Creating a SVG image -->
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none; fill: rgba(255,255,255,0.1);">
+                    </path>
+                </svg>
             </div>
 
             <div class="tl-item" (mouseover)="selectedChild='item-5'" (mouseout)="selectedChild=''">
+                <!-- Creating a SVG image -->
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none; fill: rgba(0,0,0,0.1);">
+                    </path>
+                </svg>
                 <div class="tl-bg" style="background-color:#7B4B94"></div>
+                <div class="tl-logo">
+                    <img src="assets/images/Interfell.png" alt="" width="50">
+                </div>
                 <div class="tl-year">
                     <p class="font-weight-bold">2019</p>
                 </div>
                 <div class="tl-content">
                     <p class="text-uppercase">Interfell Corporation</p>
-                    <p>
+                    <p class="text-description">
                         Desarrolladora Front-end: Maquetación y
                         desarrollo de aplicaciones web,
                         haciendo uso principalmente del
@@ -83,6 +156,13 @@
                         Material Design
                     </p>
                 </div>
+                <!-- Creating a SVG image -->
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
+                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                    <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
+                        style="stroke:none; fill: rgba(255,255,255,0.1);">
+                    </path>
+                </svg>
             </div>
         </div>
     </div>
