--- a/src/app/home/pages/experience/experience.component.html
+++ b/src/app/home/pages/experience/experience.component.html
@@ -4,8 +4,7 @@
     <div class="timeline-border" [class]="selectedChild">
         <div id="timeline">
             <div class="tl-item" (mouseover)="selectedChild='item-1'" (mouseout)="selectedChild=''">
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-top d-md-block d-none">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none; fill: rgba(0,0,0,0.1);">
                     </path>
@@ -27,8 +26,7 @@
                     </p>
                 </div>
                 <!-- Creating a SVG image -->
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-bottom">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none; fill: rgba(255,255,255,0.1);">
                     </path>
@@ -36,8 +34,7 @@
             </div>
 
             <div class="tl-item" (mouseover)="selectedChild='item-2'" (mouseout)="selectedChild=''">
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-top d-md-block d-none">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none; fill: rgba(0,0,0,0.1);">
                     </path>
@@ -60,8 +57,7 @@
                     </p>
                 </div>
                 <!-- Creating a SVG image -->
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-bottom">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none;fill: rgba(255,255,255,0.1);">
                     </path>
@@ -69,8 +65,7 @@
             </div>
 
             <div class="tl-item" (mouseover)="selectedChild='item-3'" (mouseout)="selectedChild=''">
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-top d-md-block d-none">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none; fill: rgba(0,0,0,0.1);">
                     </path>
@@ -91,8 +86,7 @@
                     </p>
                 </div>
                 <!-- Creating a SVG image -->
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-bottom">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none;fill: rgba(255,255,255,0.1);">
                     </path>
@@ -100,8 +94,7 @@
             </div>
 
             <div class="tl-item" (mouseover)="selectedChild='item-4'" (mouseout)="selectedChild=''">
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-top d-md-block d-none">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none; fill: rgba(0,0,0,0.1);">
                     </path>
@@ -123,8 +116,7 @@
                     </p>
                 </div>
                 <!-- Creating a SVG image -->
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-bottom">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none; fill: rgba(255,255,255,0.1);">
                     </path>
@@ -133,8 +125,7 @@
 
             <div class="tl-item" (mouseover)="selectedChild='item-5'" (mouseout)="selectedChild=''">
                 <!-- Creating a SVG image -->
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;top: 0;left: 0;width: 100%;">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-top d-md-block d-none">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none; fill: rgba(0,0,0,0.1);">
                     </path>
@@ -157,8 +148,7 @@
                     </p>
                 </div>
                 <!-- Creating a SVG image -->
-                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet"
-                    style="z-index: 1000;position: absolute;bottom: 0;left: 0;width: 100%;transform:scale(-1)">
+                <svg viewBox="0 0 500 135" preserveAspectRatio="xMinYMin meet" class="wave-bottom">
                     <path d="M0, 100 C150, 200 350, 0 500, 100 L500, 00 L0, 0 Z"
                         style="stroke:none; fill: rgba(255,255,255,0.1);">
                     </path>
