--- a/src/app/home/pages/about-me/about-me.component.html
+++ b/src/app/home/pages/about-me/about-me.component.html
@@ -29,8 +29,8 @@
                     <div class="badge-dark">Typescript</div>
                 </div>
             </div>
-            <div class="mt-4 text-center col-4 offset-4">
-                <a href="#" class="btn btn-sm animated-button btn-main">{{'DownloadCV'|translate}}</a>
+            <div class="mt-4 text-center">
+                <a href="#" class="btn btn-sm btn-primary">{{'DownloadCV'|translate}}</a>
             </div>
         </div>
         <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-5 offset-md-0">
