--- a/src/app/home/pages/contact-me/contact-me.component.html
+++ b/src/app/home/pages/contact-me/contact-me.component.html
@@ -1,1 +1,66 @@
-<p>contact-me works!</p>
+<div class="content">
+    <div class="card bg-dark-secondary">
+        <div class="card-body">
+            <div class="div-right-vertical"></div>
+            <app-header-section [title]="title" *ngIf="title"></app-header-section>
+            <div class="row">
+                <div class="col-md-6 offset-md-1">
+                    <form class="contact" [formGroup]="form" method="post" (ngSubmit)="onSubmit()">
+                        <div class="form-group">
+                            <label>{{'Name'|translate}}</label>
+                            <input formControlName="name" required class="form-control"
+                                [ngClass]="{'is-invalid': (form.get('name').errors && (form.get('name').dirty || form.get('name').touched))}"
+                                placeholder="Your name" (change)="change()">
+                            <div
+                                *ngIf="form.get('name').errors && (form.get('name').dirty || form.get('name').touched)">
+                                <small *ngIf="form.get('name').errors.required" class="text-danger">
+                                    Este campo es requerido
+                                </small>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>{{'Email'|translate}}</label>
+                            <input class="form-control" formControlName="email" placeholder="email@example.com"
+                                [ngClass]="{'is-invalid': (form.get('email').errors && (form.get('email').dirty || form.get('email').touched))}"
+                                required>
+                            <div
+                                *ngIf="form.get('email').errors && (form.get('email').dirty || form.get('email').touched)">
+                                <small *ngIf="form.get('email').errors.required" class="text-danger">
+                                    Este campo es requerido
+                                </small>
+                                <small *ngIf="form.get('email').errors.email" class="text-danger">
+                                    El email no posee un formato válido
+                                </small>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>{{'Message'|translate}}</label>
+                            <textarea class="form-control" formControlName="message" maxlength="256"
+                                placeholder="Type your message here..." required
+                                [ngClass]="{'is-invalid': (form.get('message').errors && (form.get('message').dirty || form.get('message').touched))}">
+                            </textarea>
+                            <p class="m-0"> {{form.get('message').value?.length || 0}}/256</p>
+                            <div
+                                *ngIf="form.get('message').errors && (form.get('message').dirty || form.get('message').touched)">
+                                <small *ngIf="form.get('message').errors.required" class="text-danger">
+                                    Este campo es requerido
+                                </small>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary" type="submit">Submit</button>
+                        <input formControlName="honeypot" class="d-none" type="text" />
+                    </form>
+                </div>
+
+                <div class="col-md-5 align-items-center d-flex">
+                    <div class="div-info p-4">
+                        <h6 class="Info"></h6>
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
