--- a/src/app/home/pages/about-me/about-me.component.html
+++ b/src/app/home/pages/about-me/about-me.component.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="mt-4 text-center">
-                <a href="#" class="btn btn-sm btn-primary">{{'DownloadCV'|translate}}</a>
+                <a href="#" class="btn btn-color-secondary">{{'DownloadCV'|translate}}</a>
             </div>
         </div>
         <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-5 offset-md-0">
