--- a/src/styles.css
+++ b/src/styles.css
@@ -117,6 +117,11 @@ h2, h4, h6 {
     border-color: var(--color-secondary);
 }
 
+.btn-color-secondary:hover {
+    background-color: var(--color-secondary);
+    opacity: 0.8;
+}
+
 .btn-outline-color-primary {
     color: var(--color-primary);
     border-color: var(--color-primary);
